# arrow-classification-model

./: AGENTS.md  README.md  pyproject.toml
src/arrow_classification_model/: camera_main.py  predict_main.py  train_main.py
train/arrow/: _classes.csv
