[project]
name = "arrow-classification-model"
version = "0.1.0"
description = ""
authors = [
    {name = "Bryce Walker",email = "brycewalker@mines.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "arrow_classification_model", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
