[project]
name = "arrow-classification-model"
version = "0.1.0"
description = ""
authors = [
    {name = "Bryce Walker",email = "brycewalker@mines.edu"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "rich (>=14.2.0,<15.0.0)"
]

[tool.poetry]
packages = [{include = "arrow_classification_model", from = "src"}]

[tool.pyright]
typeCheckingMode = "standard"
reportUnknownVariableType = false
venvPath = "."
venv = ".venv"
# pythonVersion = "3.11"  # or whatever you actually used


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = "arrow_classification_model.train_main:main"
predict = "arrow_classification_model.predict_main:main"
camera = "arrow_classification_model.camera_main:main"
